@@ -1,8 +1,5 @@
 package ru.tagallteam.hackstarter.application.user.service.impl;
 
-import java.util.Comparator;
-import java.util.List;
-
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
@@ -17,7 +14,6 @@ import ru.tagallteam.hackstarter.application.achievement.model.AchievementDto;
 import ru.tagallteam.hackstarter.application.activity.mapper.ActivityMapper;
 import ru.tagallteam.hackstarter.application.common.filter.CommonFilter;
 import ru.tagallteam.hackstarter.application.common.filter.Page;
-import ru.tagallteam.hackstarter.application.event.domain.Event;
 import ru.tagallteam.hackstarter.application.event.mapper.EventMapper;
 import ru.tagallteam.hackstarter.application.event.modal.EventDto;
 import ru.tagallteam.hackstarter.application.user.domain.User;
@@ -27,6 +23,8 @@ import ru.tagallteam.hackstarter.application.user.model.ProfileDto;
 import ru.tagallteam.hackstarter.application.user.service.UserService;
 import ru.tagallteam.hackstarter.errors.ErrorDescriptor;
 
+import java.util.Comparator;
+import java.util.List;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -56,10 +54,15 @@ public class UserServiceImpl implements UserService {
                     return achievementDto;
                 })
                 .collect(Collectors.toList()));
-        profile.setActivities(user.getActivities().stream()
-                .map(activityMapper::convertToActivityDto).collect(Collectors.toList()));
-        List<EventDto> events = user.getEvents().stream().sorted(Comparator.comparing(Event::getEventTime))
-                .limit(4).map(eventMapper::convertToEventDto).collect(Collectors.toList());
+        profile.setActivities(user.getActivities()
+                .stream()
+                .map(activityMapper::convertToActivityDto)
+                .collect(Collectors.toList()));
+        List<EventDto> events = user.getEventsOfUser()
+                .stream()
+                .sorted(Comparator.comparing((item) -> item.getEvent().getEventTime()))
+                .limit(4).map(item -> eventMapper.convertToEventDto(item.getEvent()))
+                .collect(Collectors.toList());
         profile.setEvents(events);
         return profile;
     }
@@ -76,8 +79,16 @@ public class UserServiceImpl implements UserService {
                     return achievementDto;
                 })
                 .collect(Collectors.toList()));
-        profile.setActivities(user.getActivities().stream()
-                .map(activityMapper::convertToActivityDto).collect(Collectors.toList()));
+        profile.setActivities(user.getActivities()
+                .stream()
+                .map(activityMapper::convertToActivityDto)
+                .collect(Collectors.toList()));
+        List<EventDto> events = user.getEventsOfUser()
+                .stream()
+                .sorted(Comparator.comparing((item) -> item.getEvent().getEventTime()))
+                .limit(4).map(item -> eventMapper.convertToEventDto(item.getEvent()))
+                .toList();
+        profile.setEvents(events);
         return profile;
     }
 
